--- a/config.json
+++ b/config.json
@@ -2,44 +2,74 @@
   "image_settings": {
     "width": 512,
     "height": 512,
-    "total_images": 50
+    "total_images": 10
   },
   "pore_settings": {
     "single_pores": {
-      "count_range": [25, 75],
+      "count_range": [
+        25,
+        75
+      ],
       "radius_mean": 15,
       "radius_std": 3,
       "min_radius": 5,
       "max_radius": 30,
       "stretch_enabled": true,
-      "stretch_factor_range": [1.0, 2.0],
+      "stretch_factor_range": [
+        1,
+        2
+      ],
       "rotation_enabled": true
     },
     "weakly_overlapping": {
-      "count_range": [10, 25],
-      "overlap_percentage_range": [0.1, 0.15],
+      "count_range": [
+        10,
+        25
+      ],
+      "overlap_percentage_range": [
+        0.1,
+        0.15
+      ],
       "radius_mean": 12,
       "radius_std": 2,
       "stretch_enabled": true,
-      "stretch_factor_range": [1.0, 1.5],
+      "stretch_factor_range": [
+        1,
+        1.5
+      ],
       "rotation_enabled": true
     },
     "strongly_overlapping": {
-      "count_range": [10, 20],
-      "overlap_percentage_range": [0.3, 0.5],
+      "count_range": [
+        10,
+        20
+      ],
+      "overlap_percentage_range": [
+        0.3,
+        0.5
+      ],
       "radius_mean": 10,
       "radius_std": 2,
       "stretch_enabled": false,
-      "stretch_factor_range": [1.0, 1.3],
+      "stretch_factor_range": [
+        1,
+        1.3
+      ],
       "rotation_enabled": false
     },
     "defective_pores": {
-      "count_range": [5, 15],
+      "count_range": [
+        5,
+        15
+      ],
       "radius_mean": 20,
       "radius_std": 5,
       "deformation_factor": 0.3,
       "stretch_enabled": true,
-      "stretch_factor_range": [1.0, 1.8],
+      "stretch_factor_range": [
+        1,
+        1.8
+      ],
       "rotation_enabled": true
     }
   },
